# AMPTGenesis

./: CMakeLists.txt  README.md  config_grid.cfg
src/: AMPTGenesis.cpp  AMPT_smearer.cpp  CMakeLists.txt  hydrodynamizer.cpp  main.cpp  parton_collision.cpp  progress_bar.cpp
